<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pageheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        style="@style/LabelTextStyle"
        android:text="@string/log_info"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/datePickerLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/pageheader"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/date"
        app:boxBackgroundColor="@color/white"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/datePickerTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_calendar"
            android:focusable="false"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:visibility="gone"
        android:id="@+id/timeOfDayLL"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/datePickerLL"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/time_of_day"
        app:boxBackgroundColor="@color/white"
        android:orientation="horizontal">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/spinner_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gulcoseLvlBreakfast_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/timeOfDayLL"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/gulcose_level_breakfast_b"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gulcoseLvlBreakfastTxt_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gulcoseLvlBreakfast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/gulcoseLvlBreakfast_b"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/gulcose_level_breakfast"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gulcoseLvlBreakfastTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gulcoseLvlLunch_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/gulcoseLvlBreakfast"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/gulcose_level_lunch_b"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gulcoseLvlLunchTxt_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gulcoseLvlLunch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/gulcoseLvlLunch_b"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/gulcose_level_lunch"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gulcoseLvlLunchTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gulcoseLvlDinner_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/gulcoseLvlLunch"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/gulcose_level_dinner_b"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gulcoseLvlDinnerTxt_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gulcoseLvlDinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/gulcoseLvlDinner_b"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/gulcose_level_dinner"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/gulcoseLvlDinnerTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dailyFootSteps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/gulcoseLvlDinner"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/daily_steps"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dailyFootStepsTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@+id/dailyFootSteps"
        app:layout_constraintStart_toStartOf="@id/dailyFootSteps"
        app:layout_constraintEnd_toEndOf="@id/dailyFootSteps"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
