<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true">

        <TextView
            android:visibility="invisible"
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="X"
            android:textSize="32dp"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/loginTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/exit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login_home"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/loginTxt"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="12dp"
            android:hint="@string/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pwdLL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/emailLL"
            app:layout_constraintStart_toStartOf="@+id/emailLL"
            app:layout_constraintEnd_toEndOf="@+id/emailLL"
            android:layout_marginTop="12dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pwdTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:visibility="gone"
            android:id="@+id/forgetPwdTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetPassword"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@id/loginTxt"
            app:layout_constraintTop_toBottomOf="@+id/pwdLL"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login_txt"
            android:layout_marginTop="28dp"
            app:layout_constraintStart_toStartOf="@id/loginTxt"
            app:layout_constraintEnd_toEndOf="@id/loginTxt"
            app:layout_constraintTop_toBottomOf="@id/forgetPwdTxt"/>

        <TextView
            android:id="@+id/needAnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/needAccount"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginStart="78dp"
            app:layout_constraintStart_toStartOf="@id/loginTxt"
            app:layout_constraintEnd_toStartOf="@+id/signUpBtn"
            app:layout_constraintTop_toBottomOf="@id/loginBtn"
            />

        <TextView
            android:id="@+id/signUpBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#15A81A"
            android:layout_marginStart="04dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@id/needAnAccount"
            app:layout_constraintTop_toBottomOf="@id/loginBtn"
            />

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="90dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:theme="@style/ProgressBarStyle"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>